# smidgen

./: CMakeLists.txt  FEATURES_PROVISOS  INSTALL  README.md  SIGNAL_SLOTS_HOWTO  TODO  USAGE
docs/: .directory
morsel/: CMakeLists.txt  README
morsel/cpp/: calculator.cpp  point.cpp  polygon.cpp  rect.cpp  rect_widget.cpp  shape.cpp  try_morsel.cpp  widget.cpp
morsel/h/: base.h  calculator.h  enamespace.h  point.h  polygon.h  rect.h  rect_widget.h  shape.h  widget.h
morseld/: .directory  CMakeLists.txt
morseld/sip/morselcore/: calculator.sip  enums.sip  morselcore_mod.sip  point.sip  polygon.sip  rect.sip  shape.sip
morseld/sip/morselwidget/: morselwidget_mod.sip  rect_widget.sip  widget.sip
morseld/test/: CMakeLists.txt  test_morsel_memory.d  use_morsel.d
src/: CMakeLists.txt
src/smidgen/: .directory  CMakeLists.txt  WrappedObject.d  b.sh  base_converters.d  casting.txt  constants.d  converter.d  converter_manager.d  cpp_wrapper.d  handle_includes_and_ifs.d  load_converter.d  make_c_package_wrapper.d  make_c_wrapper.d  make_d_wrapper.d  make_wrapping.d  parse.sh  parse_converter.d  parse_sip.d  signals_slots.d
src/smidgen/ast/: argument.d  enum_.d  klass.d  method.d  modules_holder.d  other.d  overrided_class_method.d  package_.d  typedef_.d
src/smidgen/test/: .directory  Makefile  at.sh  atst.d  make_test_package.d  qapplication.sip  qapplication_class.sip  qglobal.sip  qnamespace.sip  qnamespace_end.sip  qobject.sip  t.sh  test_argument.d  test_ast_classes.d  test_cpp_wrapper.d  test_extras.d  test_handle_includes_and_ifs.d  test_klass.d  test_loaded_converter.d  test_make_c_wrapper.d  test_make_d_wrapper.d  test_method.d  test_parse_converter.d  test_parse_q_application.d  test_parse_q_global.d  test_parse_q_namespace.d  test_parse_q_object.d  test_parse_sip.d  test_signals_slots.d  test_typedef.d  tst.d
